HW2: add keyword bar

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
     <div class="app">
         <header class="app__header">
-            header
+            <span class="app__header__keywords">Keywords</span>
+            <input class="app_header_input" type="text">
+            <button class="app_header_button">Submit</button>
         </header>
 
         <main class="app__content">
-            main
+
         </main>
 
         <footer class="app__footer">
