HW3: add nav-block & nav-child

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
         </header>
 
         <main class="app__content">
-
+            <div class="nav-block">
+                <div class="nav-child">Potato</div>
+                <div class="nav-child">Sprout Tomato</div>
+                <div class="nav-child">Gumbo beet greens</div>
+                <div class="nav-child">corn soko</div>
+                <div class="nav-child">endive gumbo gourd</div>
+                <div class="nav-child">Parsley shallout courgette tatsoi</div>
+                <div class="nav-child">pea sprouts fava bean</div>
+                <div class="nav-child">collard greens</div>
+                <div class="nav-child">dandelion okra wakame</div>
+                <div class="nav-child">tomato</div>
+            </div>
         </main>
 
         <footer class="app__footer">
