HW5: add navigation bar & combine keyword bar

--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
 <body>
     <div class="app">
         <header class="app__header">
-            <span class="app__header__keywords">Keywords</span>
-            <input class="app_header_input" type="text">
-            <button class="app_header_button">Submit</button>
+            <img src="logo-dog.png" class="app__header__logo">
+
+                <nav class="app__header__navbar">
+                    <div class="left-side-nav">
+                        <ul class="nav-list">
+                            <li><a href="#" class="nav-link">Home</a></li>
+                            <li><a href="#" class="nav-link">About</a></li>
+                            <li><a href="#" class="nav-link">Services</a></li>
+                            <li><a href="#" class="nav-link">Contact</a></li>
+                        </ul>
+                    </div>
+            
+                <div class="right-side-nav">
+                    <span class="app__header__keywords">Keywords</span>
+                    <input class="app_header_input" type="search" placeholder="Search...">
+                    <!-- <input class="search" type="search" placeholder="Search..."> -->
+                    <button class="app_header_button">Submit</button>
+                </div>
+            </nav>
         </header>
 
         <main class="app__content">
