HW6: add product list card

--- a/index.html
+++ b/index.html
@@ -43,6 +43,46 @@
                 <div class="nav-child">dandelion okra wakame</div>
                 <div class="nav-child">tomato</div>
             </div>
+            <!-- div -->
+                <!-- div -->
+                    <!-- left right -->
+                <div class="product-list">
+                    <div class="card">
+                        <img src="pawdy.jpg" alt="pawdy">
+                        <span>Pawdy แม่และลูกสุนัข ไก่และข้าวผสมนมแพะ 1.2 Kg</span>
+                        <p class="price">฿239</p>
+                        <p><button>Add to Cart</button></p>
+                    </div>
+
+                    <div class="card">
+                        <img src="smartheart.png" alt="smartheart">
+                        <span>SmartHeart สำหรับสุนัขโตพันธุ์เล็ก รสไก่ตับ 500 g.</span>
+                        <p class="price">฿129</p>
+                        <p><button>Add to Cart</button></p>
+                    </div>
+
+                    <div class="card">
+                        <img src="pedigree.png" alt="pedigree">
+                        <span>Pedigree mother & babydog สำหรับแม่สุนัขและลูกสุนัข รสนม 1.3 kg.</span>
+                        <p class="price">฿189</p>
+                        <p><button>Add to Cart</button></p>
+                    </div>
+
+                    <div class="card">
+                        <img src="royal-cannin.jpg" alt="royal-cannin">
+                        <span>Royal canin Mini exigent 1 kg สำหรับสุนัขโตพันธุ์เล็ก กินยาก ขนาด 1 กก.</span>
+                        <p class="price">฿450</p>
+                        <p><button>Add to Cart</button></p>
+                    </div>
+
+                    <div class="card">
+                        <img src="hills.jpg" alt="hills">
+                        <span>Hill's Adult Small Paws สุนัขพันธุ์เล็ก อายุ 1-6 ปี 1.5 kg.</span>
+                        <p class="price">฿790</p>
+                        <p><button>Add to Cart</button></p>
+                    </div>
+                </div>
+            <!-- end div -->
         </main>
 
         <footer class="app__footer">
