HW6: add section catergory, filter by, sort by

--- a/index.html
+++ b/index.html
@@ -46,6 +46,38 @@
             <!-- div -->
                 <!-- div -->
                     <!-- left right -->
+            <div class="product-content">
+
+                <div class="product-nav">
+                    <div class="product-category">
+                        <span class="product-category-name">อาหารเม็ดสุนัข</span>
+                    </div>
+
+                    <div class="product-filter">
+                        <span class="filter-by-name">FILTER BY:</span>
+                            <select name="filter-by" id="filter-by">
+                                <option value="pawdy">Pawdy</option>
+                                <option value="pedigree">Pedigree</option>
+                                <option value="smartheart">Smartheart</option>
+                                <option value="royal-cannin">Royal cannin</option>
+                                <option value="hills">Hills</option>
+                            </select>
+                    </div>
+
+                    <div class="product-sort">
+                        <span class="sort-by-name">SORT BY:</span>
+                        <select name="sort-by" id="sort-by">
+                            <option value="name-asc">Name A-Z</option>
+                            <option value="name-desc">Name Z-A</option>
+                            <option value="age-asc">Age min-max</option>
+                            <option value="age-desc">Age max-min</option>
+                        </select>
+                    </div>
+
+                </div>
+
+            
+
                 <div class="product-list">
                     <div class="card">
                         <img src="pawdy.jpg" alt="pawdy">
@@ -82,6 +114,7 @@
                         <p><button>Add to Cart</button></p>
                     </div>
                 </div>
+            </div>
             <!-- end div -->
         </main>
 
