add media query

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="app">
-        <header class="app__header">
+        <header class="app__header__desktop">
             <img src="logo-dog.png" class="app__header__logo">
 
                 <nav class="app__header__navbar">
@@ -30,6 +30,20 @@
             </nav>
         </header>
 
+        <header class="app__header__mobile">
+            <!-- <img src="logo-dog.png" class="app__header__logo"> -->
+            <nav class="app__header__navbar">
+                <div class="mobile-nav">
+                    <ul class="nav-list">
+                        <li><a href="#" class="nav-link">Home</a></li>
+                        <li><a href="#" class="nav-link">About</a></li>
+                        <li><a href="#" class="nav-link">Services</a></li>
+                        <li><a href="#" class="nav-link">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+
         <main class="app__content">
             <div class="nav-block">
                 <div class="nav-child">Potato</div>
@@ -43,9 +57,7 @@
                 <div class="nav-child">dandelion okra wakame</div>
                 <div class="nav-child">tomato</div>
             </div>
-            <!-- div -->
-                <!-- div -->
-                    <!-- left right -->
+
             <div class="product-content">
 
                 <div class="product-nav">
@@ -119,7 +131,6 @@
         </main>
 
         <footer class="app__footer">
-            footer
         </footer>
 
     </div>
